--- a/librarymanagementproject.client/package.json
+++ b/librarymanagementproject.client/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@fortawesome/angular-fontawesome": "^0.14.1",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.3.2",
     "jest-editor-support": "*",
     "primeng": "^16.9.1",
